--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+#Files to ignore
 
+#folder for publishing to shiny.io
 rsconnect/
+#data folders for app too large to add to github
 NHD_Ca.geojson
 SA_Thresh_Final2.RData
-#h
 
 # History files
 .Rhistory
